openshift/Deployment.yaml
apiVersion: v1
items:
- apiVersion: apps.openshift.io/v1
  kind: DeploymentConfig
  metadata:
    annotations:
      description: SPD Shiny Server deployment
      template.alpha.openshift.io/wait-for-ready: "true"
    labels:
      app: spd
    name: spd-shiny-app
  spec:
    replicas: 1
    strategy:
      type: Rolling
    template:
      metadata:
        labels:
          app: spd
        name: spd-shiny-app
      spec:
        containers:
        - image: spd-shiny-app:latest
          livenessProbe:
            httpGet:
              path: /
              port: 3838
            initialDelaySeconds: 30
            timeoutSeconds: 30
          name: spd-shiny-app
          ports:
          - containerPort: 3838
          readinessProbe:
            httpGet:
              path: /
              port: 3838
            initialDelaySeconds: 30
            timeoutSeconds: 30
          resources:
            requests:
              memory: 1G
          volumeMounts:
          - mountPath: /data
            name: spd-data
        volumes:
        - name: spd-data
          persistentVolumeClaim:
            claimName: spd-data-pvc
    triggers:
    - imageChangeParams:
        automatic: true
        containerNames:
        - spd-shiny-app
        from:
          kind: ImageStreamTag
          name: spd-shiny-app:latest
      type: ImageChange
    - type: ConfigChange
- apiVersion: v1
  kind: Service
  metadata:
    labels:
      app: spd
    name: spd-shiny-app
  spec:
    ports:
    - name: spd-shiny-service
      port: 80
      protocol: TCP
      targetPort: 3838
    selector:
      app: spd
- apiVersion: v1
  kind: Route
  metadata:
    labels:
      app: spd
    name: spd-shiny-route
  spec:
    path: /
    to:
      kind: Service
      name: spd-shiny-app
kind: List
metadata: {}
